Sprememba pri uvozu (urejanje tabele) in sprememba poročila.

--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -9,12 +9,16 @@
 \begin{document}
 \title{Poročilo pri predmetu \\
 Analiza podatkov s programom R}
-\author{Študent FMF}
+\author{Neja Pletikos}
 \maketitle
 
 \section{Izbira teme}
 
+V prvi fazi sem si izbrala temo in sicer prometne nesreče po regijah v Sloveniji. Primerjala bom število prometnih nesreč po vrstah poškodbe (s smrtnim izidom, telesno poškodbo ali zgolj materialna škoda) in po poškodbah udeležencev v prometnih nesrečah (smrtne žrtve, huda/lažja/brez poškodbe). Poskušala bom ugotoviti kako se po regijah število prometnih nesreč razlikuje, ali katera posebej izstopa s številom smrtnih žrtev, zgolj po številu prometnih nesreč itd.
+
 \section{Obdelava, uvoz in čiščenje podatkov}
+
+V drugi fazi sem uvozila tabelo s podatki v CSV obliki. Pri tem sem si pomagala z vajami ki smo jih rešili na faksu in pa z vzorcem ki je bil priložen. Naredila bom še graf.
 
 \section{Analiza in vizualizacija podatkov}
 
