--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -18,7 +18,7 @@ V prvi fazi sem si izbrala temo in sicer prometne nesreče po regijah v Slovenij
 
 \section{Obdelava, uvoz in čiščenje podatkov}
 
-V drugi fazi sem uvozila tabelo s podatki v CSV obliki. Pri tem sem si pomagala z vajami ki smo jih rešili na faksu in pa z vzorcem ki je bil priložen. Naredila bom še graf.
+V drugi fazi sem uvozila tabelo s podatki v CSV obliki. Pri tem sem si pomagala z vajami ki smo jih rešili na faksu in pa z vzorcem ki je bil priložen. Naredila sem še dva grafa, eden prikazuje število prometnih nesreč v letih 2011-2013, drugi pa število udeležencev v prometnih nesrečah v istem časovnem obdobju.
 
 \section{Analiza in vizualizacija podatkov}
 
