--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -20,12 +20,18 @@ V prvi fazi sem si izbrala temo in sicer prometne nesreče po regijah v Slovenij
 
 V drugi fazi sem uvozila tabelo s podatki v CSV obliki. Pri tem sem si pomagala z vajami ki smo jih rešili na faksu in pa z vzorcem ki je bil priložen. Naredila sem še dva grafa, eden prikazuje število prometnih nesreč v letih 2011-2013, drugi pa število udeležencev v prometnih nesrečah v istem časovnem obdobju.
 
+Graf števila prometnih nesreč v letih 2011-2013:
+\includegraphics[width=\textwidth]{../slike/skupajnesrece.pdf}
+
+Graf števila udeležencev:
+\includegraphics[width=\textwidth]{../slike/steviloudelezencev.pdf}
+
 \section{Analiza in vizualizacija podatkov}
 
-\includegraphics{../slike/povprecna_druzina.pdf}
+
 
 \section{Napredna analiza podatkov}
 
-\includegraphics{../slike/naselja.pdf}
+
 
 \end{document}
