Sprememba poročila, dodana 3. faza.

--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -30,6 +30,8 @@ Graf števila udeležencev:
 
 \section{Analiza in vizualizacija podatkov}
 
+V tretji fazi sem uvozila zemljevid Slovenije z vrisanimi regijami, na njem so napisana še imena posameznih regij. Na njemu je prikazano število nesreč v vsaki regiji v letu 2011. Iz zemljevida je razvidno, da je bilo največ nesreč v Osrednjeslovenski in Podravski regiji.
+
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{../slike/slovenija1.pdf}
 }
